fixed item-cards to align flex-start

--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -1024,6 +1024,19 @@ input, textarea {
         font-weight: lighter;
     }
     
+.item-card-container {
+    margin-top: 10px;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    overflow-x: scroll;
+}
+    
 /* 
 
         .splitter-bar-lower {
